# torched-wordle

./: README.md  pyproject.toml
src/wordle_torch/: game.py  main.py  response.py  utils.py
test/: test_analyze_guess.py
