[tool.poetry]
name = "wordle-torch"
version = "0.1.0"
description = ""
authors = ["Alex Berndt <berndtae@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
